--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,32 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# React / Vite / Node artifacts (frontend)
+node_modules/
+frontend/node_modules/
+
+# build / output
+dist/
+frontend/dist/
+.vite/
+frontend/.vite/
+
+# env locals and debug logs
+.env.local
+.env.*.local
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# caches and build tools
+.cache/
+.parcel-cache/
+.next/
+out/
+
+# editors / OS
+.vscode/
+.DS_Store
+Thumbs.db
